# chitchat-nao

./: .gitignore  Dockerfile.naoqi-py2  README.md  TODO.md  cli_client.py  edilson-audio.flac  info.txt  language-module.py  language_model.py  main.py  pyproject.toml  ruff.toml  say_nao.py  say_nao_py2.py  server.py  transcribe.py
docs/: architecture.md
knowledge_base/: club_overview.md  faq.md  officers.md
tests/: test_say_nao.py
