[project]
name = "chitchat-nao"
version = "0.1.0"
description = "Making the Nao6 robot smarter with machine learning and natural language processing."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "llama-cpp-python>=0.3.28",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]
